kubernetes/main/apps/identity/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://identity.18b.haus/-/health/live/
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/name: Authentik
    gethomepage.dev/pod-selector: app.kubernetes.io/name=authentik
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames:
    - identity.18b.haus
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
